--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <script src="js/jquery-3.3.1.js"></script>
@@ -12,20 +11,21 @@
     <h1>Let's calculate!</h1>
     <div class="container">
       <h2>Addition:</h2>
-        <div id="blanks">
-          <form>
+        <div>
+          <form id="calc">
             <div class="form-group">
               <label for="number1">A number</label>
-              <input id="number1" class="form-control" type="number">
+              <input id="number1" class="form-control" type="text">
             </div>
             <h5>+</h5>
             <div class="form-group">
               <label for="number2">Another number</label>
-              <input id="number2" class="form-control" type="number">
+              <input id="number2" class="form-control" type="text">
             </div>
+            <button type="submit" class="btn">Add</button>
           </form>
         </div>
-      <button type="submit" class="btn-primary">Add</button>
+
       <hr/>
       <div class="result">
       <p>The sum is: <span class="number1"></span><span class="number2"></span></p>
