append two numbers, but it still won't add them as numbers. maybe it's because input type is 'text'?

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <label for="number2">Another number</label>
               <input id="number2" class="form-control" type="text">
             </div>
-            <button type="submit" class="btn">Add</button>
+            <button type="submit" class="btn btn-default">Add</button>
           </form>
         </div>
 
@@ -30,9 +30,7 @@
       <div class="result">
       <p>The sum is: <span class="number1"></span><span class="number2"></span></p>
       </div>
-
     </div>
-
 
   </body>
 </html>
