it will work now

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <hr/>
       <div class="result">
-      <p>The sum is: <span class="number1"></span><span class="number2"></span></p>
+      <p>The sum is: <span class="sum"></span></p>
       </div>
     </div>
 
