--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <form id="calc">
           <div class="form-group">
             <label for="number1">A number</label>
-            <input id="number1" class="form-control" type="text">
+            <input id="number1" class="form-control" type="number">
             <br/>
             <label for="number2">Another number</label>
-            <input id="number2" class="form-control" type="text">
+            <input id="number2" class="form-control" type="number">
           </div>
           <div class="radio">
             <label>
@@ -41,10 +41,29 @@
         </form>
       </div>
 
-      <hr/>
       <div class="result">
       <h2><strong>The result is: <span class="result"></span></strong></h2>
       </div>
+      <hr/>
+
+      <h1>Let's triangle!</h1>
+      <form id="calc">
+        <div class="form-group">
+          <label for="num1">A number</label>
+          <input id="num1" class="form-control" type="number">
+          <br/>
+          <label for="num2">Another number</label>
+          <input id="num2" class="form-control" type="number">
+          <br/>
+          <label for="num3">One more number</label>
+          <input id="num3" class="form-control" type="number">
+        </div>
+        <button type="submit" class="btn btn-success btn-lg">Triangulate it!</button>
+      </form>
+      <div class="result2">
+      <h2><strong>The result is: <span class="result2"></span></strong></h2>
+      </div>
+      <hr/>
     </div>
 
   </body>
