it will add JS logic for evaluating what type of triangle the three given numbers create and if they result in a triangle at all.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <hr/>
 
       <h1>Let's triangle!</h1>
-      <form id="calc">
+      <form id="tri">
         <div class="form-group">
           <label for="num1">A number</label>
           <input id="num1" class="form-control" type="number">
